# docker-credential-oidc

./: Cargo.toml  Dockerfile  LICENSE  docker-credential-oidc  flake.nix  server.py
.github/workflows/: build-client.yaml  build-server.yaml  build.yaml
src/: lib.rs  main.rs  pattern.rs
