[package]
name = "docker-credential-oidc"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
oauth2 = "4.4.2"
reqwest = { version = "0.12.9", features = ["json", "blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tiny_http = "0.12.0"
webbrowser = "1.0.0"
itertools = "0.14"
glob = "0.3"
url = "2.5"
thiserror = "2"

[[bin]]
name = "oidc-credential-provider"
