[package]
name = "docker-credential-oidc"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
oauth2 = { version = "5", features = ["reqwest-blocking"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
webbrowser = "1"
itertools = "0.14"
glob = "0.3"
url = "2"
thiserror = "2"

[[bin]]
name = "oidc-credential-provider"
